# libusb

./: CMakeLists.txt
libusb/: CMakeLists.txt  config.h.cmake  core.c
libusb/os/: windows_usb.c
